# isoget

./: README.md
isoget/: pyproject.toml
isoget/src/isoget/: __init__.py  cli.py  core.py  utils.py
src/isoget/: README.md
